--- a/person.html
+++ b/person.html
@@ -678,6 +678,8 @@
             </div>
           </div>
         </div>
+
+        <div class="navbar__small-screen--append"></div>
       </div>
     </div>
 
