--- a/person.html
+++ b/person.html
@@ -979,7 +979,9 @@
                           <span class="material-symbols-outlined btn-defadivt"
                             >search</span
                           >
-                          <span class="material-symbols-outlined btn-default"
+                          <span
+                            class="material-symbols-outlined btn-default"
+                            id="filter-btn"
                             >filter_alt</span
                           >
                           <span class="material-symbols-outlined btn-default"
@@ -1145,6 +1147,110 @@
                           </div>
                         </div>
                       </div>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="card__boxes--box__content filters">
+                <div class="filters__line">
+                  <div class="check-box">
+                    <span class="material-symbols-outlined">
+                      check_box_outline_blank
+                    </span>
+                    <span>1</span>
+                  </div>
+                  <div class="fields">
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>תגית</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>שווה</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>חשוב</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                  </div>
+                  <div class="add-delete-btns-container">
+                    <span class="material-symbols-outlined btn-default">
+                      add
+                    </span>
+                    <span class="material-symbols-outlined btn-default">
+                      remove
+                    </span>
+                  </div>
+                </div>
+                <div class="filters__line">
+                  <div class="check-box">
+                    <span class="material-symbols-outlined">
+                      check_box_outline_blank
+                    </span>
+                    <span>1</span>
+                  </div>
+                  <div class="fields">
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>תגית</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>שווה</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                    <span class="edit-content transparent">
+                      <span class="label">
+                        <span>חשוב</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                  </div>
+                  <div class="add-delete-btns-container">
+                    <span class="material-symbols-outlined btn-default">
+                      add
+                    </span>
+                    <span class="material-symbols-outlined btn-default">
+                      remove
                     </span>
                   </div>
                 </div>
