--- a/person.html
+++ b/person.html
@@ -1045,6 +1045,118 @@
                   </span>
                 </div>
               </div>
+              <div class="filters__line">
+                <div class="check-box">
+                  <span class="material-symbols-outlined">
+                    check_box_outline_blank
+                  </span>
+                  <div class="filters-number">
+                    <span>1</span>
+                    <span class="material-symbols-outlined small-icon">
+                      more_vert
+                    </span>
+                  </div>
+                </div>
+                <div class="fields">
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>סטטוס</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>לא שווה</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>ליד</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                </div>
+                <div class="add-delete-btns-container">
+                  <span class="material-symbols-outlined btn-default">
+                    add
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    remove
+                  </span>
+                </div>
+              </div>
+              <div class="filters__line">
+                <div class="check-box">
+                  <span class="material-symbols-outlined" style="opacity: 0;">
+                    check_box_outline_blank
+                  </span>
+                  <div class="filters-number" style="opacity: 0;">
+                    <span>1</span>
+                    <span class="material-symbols-outlined small-icon">
+                      more_vert
+                    </span>
+                  </div>
+                </div>
+                <div class="fields">
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>בחר שדה...</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>שווה</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                  <span class="edit-content transparent">
+                    <span class="label">
+                      <span>בחר ערך...</span>
+                    </span>
+                    <span class="edit-field">
+                      <span class="value-text"></span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+                  </span>
+                </div>
+                <div class="add-delete-btns-container">
+                  <span class="material-symbols-outlined btn-default">
+                    add
+                  </span>
+                  <span class="material-symbols-outlined btn-default">
+                    remove
+                  </span>
+                </div>
+              </div>
             </div>
             <div class="card__boxes--box__content zero-extend" id="zero-extend-communications">
               <div class="card__boxes--box__content--fields">
