--- a/person.html
+++ b/person.html
@@ -1261,17 +1261,7 @@
                   </div>
                 </div>
                 <div class="filters__line">
-                  <div class="check-box">
-                    <span class="material-symbols-outlined" style="opacity: 0">
-                      check_box_outline_blank
-                    </span>
-                    <div class="filters-number" style="opacity: 0">
-                      <span>1</span>
-                      <span class="material-symbols-outlined small-icon">
-                        more_vert
-                      </span>
-                    </div>
-                  </div>
+                  <div class="check-box"></div>
                   <div class="fields">
                     <span class="edit-content disabled">
                       <span class="label">
@@ -1310,6 +1300,57 @@
                   <div class="add-delete-btns-container">
                     <span class="material-symbols-outlined"> add </span>
                     <span class="material-symbols-outlined"> remove </span>
+                  </div>
+                </div>
+                <div class="filters__line">
+                  <div class="check-box">
+                    <span>מיון</span>
+                  </div>
+                  <div class="fields">
+                    <span class="edit-content">
+                      <span class="label">
+                        <span>יורד</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                  </div>
+                </div>
+                <div class="filters__line">
+                  <div class="check-box">
+                    <div class="check-box">
+                      <span
+                        class="material-symbols-outlined"
+                        style="opacity: 0"
+                      >
+                        check_box_outline_blank
+                      </span>
+                      <div class="filters-number">
+                        <span>1</span>
+                        <span
+                          class="material-symbols-outlined small-icon btn-default"
+                        >
+                          more_vert
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="fields">
+                    <span class="edit-content">
+                      <span class="label">
+                        <span>סטטוס</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text"></span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
                   </div>
                 </div>
               </div>
