--- a/person.html
+++ b/person.html
@@ -1151,7 +1151,18 @@
                   </div>
                 </div>
               </div>
-              <div class="card__boxes--box__content filters">
+              <div class="card__boxes--box__content filters active">
+                <div class="filters-header">
+                  <div class="title">סינון תוצאות</div>
+                  <div class="icon-container">
+                    <span
+                      class="material-symbols-outlined btn-default"
+                      id="close-filters"
+                    >
+                      close
+                    </span>
+                  </div>
+                </div>
                 <div class="filters__line">
                   <div class="check-box">
                     <span class="material-symbols-outlined">
