--- a/person.html
+++ b/person.html
@@ -1154,6 +1154,7 @@
               <div class="card__boxes--box__content filters active">
                 <div class="filters-header">
                   <div class="title">סינון תוצאות</div>
+
                   <div class="icon-container">
                     <span
                       class="material-symbols-outlined btn-default"
@@ -1163,6 +1164,8 @@
                     </span>
                   </div>
                 </div>
+                <div class="line"></div>
+
                 <div class="filters__line">
                   <div class="check-box">
                     <span class="material-symbols-outlined">
@@ -1217,6 +1220,7 @@
                     <span class="material-symbols-outlined"> remove </span>
                   </div>
                 </div>
+                <div class="line"></div>
                 <div class="filters__line">
                   <div class="check-box">
                     <span class="material-symbols-outlined">
@@ -1271,6 +1275,8 @@
                     <span class="material-symbols-outlined"> remove </span>
                   </div>
                 </div>
+                <div class="line"></div>
+
                 <div class="filters__line">
                   <div class="check-box"></div>
                   <div class="fields">
@@ -1313,6 +1319,8 @@
                     <span class="material-symbols-outlined"> remove </span>
                   </div>
                 </div>
+                <div class="line"></div>
+
                 <div class="filters__line">
                   <div class="check-box">
                     <span>מיון</span>
@@ -1331,6 +1339,8 @@
                     </span>
                   </div>
                 </div>
+                <div class="line"></div>
+
                 <div class="filters__line">
                   <div class="check-box">
                     <div class="check-box">
