--- a/person.html
+++ b/person.html
@@ -1156,6 +1156,8 @@
                   <div class="title">סינון תוצאות</div>
 
                   <div class="icon-container">
+                    <span class="btn-primary">הפעל</span>
+
                     <span
                       class="material-symbols-outlined btn-default"
                       id="close-filters"
