--- a/person.html
+++ b/person.html
@@ -1407,14 +1407,22 @@
                         <div class="table-cell sticky-cell sticky-header">
                           שם
                         </div>
-                        <div class="table-cell big-cell">תפקיד בקשר</div>
+                        <div class="table-cell visibility-width-title">
+                          <span>תפקיד בקשר</span>
+                          <span
+                            class="material-symbols-outlined visibility-btn"
+                            id="visibility-btn"
+                          >
+                            visibility_off
+                          </span>
+                        </div>
                         <div class="table-cell big-cell">תקשורת</div>
                       </div>
                       <div class="table-row">
                         <div class="table-cell sticky-cell sticky-row">
                           Figma
                         </div>
-                        <div class="table-cell big-cell">
+                        <div class="table-cell visibility-width">
                           מעסיק חיצוני, בעלים
                         </div>
                         <div class="table-cell big-cell">
@@ -1433,14 +1441,16 @@
                         <div class="table-cell sticky-cell sticky-row">
                           אביבה
                         </div>
-                        <div class="table-cell big-cell">עובד</div>
+                        <div class="table-cell visibility-width">עובד</div>
                         <div class="table-cell big-cell"></div>
                       </div>
                       <div class="table-row">
                         <div class="table-cell sticky-cell sticky-row">
                           יצחק נהון
                         </div>
-                        <div class="table-cell big-cell">עובד, מזכיר</div>
+                        <div class="table-cell visibility-width">
+                          עובד, מזכיר
+                        </div>
                         <div class="table-cell big-cell">
                           <span>04-84900301, ראשי</span>
                           <span class="material-symbols-outlined stop-icon">
