--- a/person.html
+++ b/person.html
@@ -1408,7 +1408,7 @@
                           שם
                         </div>
                         <div class="table-cell visibility-width-title">
-                          <span>תפקיד בקשר</span>
+                          <span class="visibility-title">תפקיד בקשר</span>
                           <span
                             class="material-symbols-outlined visibility-btn"
                             id="visibility-btn"
