--- a/person.html
+++ b/person.html
@@ -1407,14 +1407,8 @@
                         <div class="table-cell sticky-cell sticky-header">
                           שם
                         </div>
-                        <div class="table-cell visibility-width-title">
-                          <span class="visibility-title">תפקיד בקשר</span>
-                          <span
-                            class="material-symbols-outlined visibility-btn"
-                            id="visibility-btn"
-                          >
-                            visibility_off
-                          </span>
+                        <div class="table-cell">
+                          <span>תפקיד בקשר</span>
                         </div>
                         <div class="table-cell big-cell">תקשורת</div>
                       </div>
@@ -1422,9 +1416,7 @@
                         <div class="table-cell sticky-cell sticky-row">
                           Figma
                         </div>
-                        <div class="table-cell visibility-width">
-                          מעסיק חיצוני, בעלים
-                        </div>
+                        <div class="table-cell">מעסיק חיצוני, בעלים</div>
                         <div class="table-cell big-cell">
                           <span>04-84900301, ראשי</span>
                           <span class="material-symbols-outlined stop-icon">
@@ -1441,16 +1433,14 @@
                         <div class="table-cell sticky-cell sticky-row">
                           אביבה
                         </div>
-                        <div class="table-cell visibility-width">עובד</div>
+                        <div class="table-cell">עובד</div>
                         <div class="table-cell big-cell"></div>
                       </div>
                       <div class="table-row">
                         <div class="table-cell sticky-cell sticky-row">
                           יצחק נהון
                         </div>
-                        <div class="table-cell visibility-width">
-                          עובד, מזכיר
-                        </div>
+                        <div class="table-cell">עובד, מזכיר</div>
                         <div class="table-cell big-cell">
                           <span>04-84900301, ראשי</span>
                           <span class="material-symbols-outlined stop-icon">
@@ -2709,7 +2699,15 @@
                             >category</span
                           >
                         </div>
-                        <div class="table-cell big-cell">קטגוריה</div>
+                        <div class="table-cell big-cell visibility-width-title">
+                          <span class="visibility-title">קטגוריה</span>
+                          <span
+                            class="material-symbols-outlined visibility-btn"
+                            id="visibility-btn"
+                          >
+                            visibility_off
+                          </span>
+                        </div>
                         <div class="table-cell medium-cell">סטטוס</div>
                         <div class="table-cell medium-cell">זמן</div>
                         <div class="table-cell medium-cell">עובדים</div>
@@ -2728,7 +2726,7 @@
                             >
                           </div>
                         </div>
-                        <div class="table-cell big-cell">
+                        <div class="table-cell big-cell visibility-width">
                           <span>הערה</span>
                         </div>
                         <div class="table-cell medium-cell">
@@ -2763,10 +2761,8 @@
                             >
                           </div>
                         </div>
-                        <div class="table-cell big-cell">
+                        <div class="table-cell big-cell visibility-width">
                           <span>תוכניות חיוב</span>
-                          <span class="small-chip red">דחוף</span>
-                          <span class="small-chip green">?חוב אבוד</span>
                         </div>
                         <div class="table-cell medium-cell">
                           <div class="tag green">
@@ -2806,7 +2802,7 @@
                             >
                           </div>
                         </div>
-                        <div class="table-cell big-cell">
+                        <div class="table-cell big-cell visibility-width">
                           <span>שלב</span>
                         </div>
                         <div class="table-cell medium-cell">
@@ -2837,7 +2833,7 @@
                             >
                           </div>
                         </div>
-                        <div class="table-cell big-cell">
+                        <div class="table-cell big-cell visibility-width">
                           <span>שיחה</span>
                         </div>
                         <div class="table-cell medium-cell">
